[workspace]
members = ["contracts/*"]

[workspace.package]
version       = "0.18.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/CosmWasm/cw-nfts"
homepage      = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"
rust-version  = "1.65"

[workspace.dependencies]
cosmwasm-schema         = "1.2.1"
cosmwasm-std            = "1.3.1"
cw-multi-test           = "0.19.0"
cw-ownable              = "0.5.1"
cw-storage-plus         = "1.1.0"
cw-utils                = "1.0.1"

cw2                     = "1.1.0"
cw721                   = "0.18.0"
cw721-base              = "0.18.0"
cw721-metadata-onchain  = "0.15.0"

schemars                = "0.8.11"
serde                   = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror               = "1.0.38"



[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false