[workspace]
members = ["contracts/*", "packages/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kromsten <kromsten@pm.me>"]


[workspace.dependencies]
cosmwasm-schema         = "1.2.1"
cosmwasm-std            = "1.3.1"
cw-multi-test           = "0.19.0"
cw-ownable              = "0.5.1"
cw-storage-plus         = "1.1.0"
cw-utils                = "1.0.1"

cw2                     = "1.1.0"
cw721                   = "0.18.0"
cw721-base              = "0.18.0"
cw721-metadata-onchain  = "0.15.0"

schemars                = "0.8.11"
thiserror               = "1.0.38"
serde                   = { version = "1.0.152", default-features = false, features = ["derive"] }

fish_common             = { path = "packages/common" }



[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false