[package]
name = "fish_minter"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

exclude = [
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[features]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.14.0
"""

[dependencies]
cosmwasm-schema         = { workspace = true }
cw-storage-plus         = { workspace = true }
cosmwasm-std            = { workspace = true }
cw-utils                = { workspace = true }

cw2                     = { workspace = true }
cw721                   = { workspace = true }
cw721-base              = { workspace = true, features = ["library"] }
cw-ownable              = { workspace = true }
cw721-metadata-onchain  = { workspace = true }

sha2                    = { version = "0.10.8", default-features = false }
rand                    = { version = "0.8.5", default-features = false , features = ["alloc"] }
rand_chacha             = { version = "0.3.1", default-features = false }
fish_common             = { workspace = true }
schemars                = { workspace = true }
thiserror               = { workspace = true }
serde                   = { workspace = true }